change categories attribute in product entities to a single string, format it when mapping